--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
   "license": "MIT",
   "scripts": {
     "start": "nodemon app.js",
-    "start-server": "node app.js"
+    "start-server": "node app.js",
+    "debug": "DEBUG=* nodemon app.js",
+    "generate-secret": "node config/generate-secret.js"
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
@@ -15,13 +17,16 @@
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
+    "express-validation": "^3.0.8",
     "express-validator": "^6.12.1",
+    "joi": "^17.4.2",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.13.3",
     "multer": "^1.4.2",
     "nodemailer": "^6.6.3",
     "nodemailer-sendgrid-transport": "^0.2.0",
-    "prettier": "^2.3.2"
+    "prettier": "^2.3.2",
+    "socket.io": "^4.1.3"
   },
   "devDependencies": {
     "nodemon": "^2.0.12"
