--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "express-validation": "^3.0.8",
     "express-validator": "^6.12.1",
     "joi": "^17.4.2",
+    "joi-objectid": "^3.0.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.13.3",
     "multer": "^1.4.2",
